fix: adicionado flex-wrap na página Dashboard

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -82,12 +82,12 @@
   margin-left: 305px;
   margin-top: 67px;
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
 }
 
 .produtos__container {
-  margin-left: 305px;
-  margin-top: 67px;
+  margin-top: 110px;
   display: flex;
   flex-direction: column;
   align-items: center;
