--- a/src/styles/_dashboard.scss
+++ b/src/styles/_dashboard.scss
@@ -2,5 +2,6 @@
   margin-left: 305px;
   margin-top: 67px;
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
 }
