--- a/src/styles/_produtos.scss
+++ b/src/styles/_produtos.scss
@@ -1,8 +1,7 @@
 @use 'variables';
 
 .produtos__container {
-  margin-left: 305px;
-  margin-top: 67px;
+  margin-top: 110px;
   display: flex;
   flex-direction: column;
   align-items: center;
